--- a/src/styles/transition.scss
+++ b/src/styles/transition.scss
@@ -15,7 +15,7 @@
 .fade-transform-leave-active,
 .fade-transform-enter-active {
   // transition: all .5s;
-  transition: all .3s;
+  // transition: all .3s;
 }
 
 .fade-transform-enter {
